2002-10-19  Jeremy Katz  <katzj@redhat.com>

	* configure.in: make configure checks for Xrandr and Xinerama
	extensions less noisy (#95858)

Fri Oct 18 16:47:02 2002  Owen Taylor  <otaylor@redhat.com>

	* gdk/x11/gdkevents-x11.c (translate_key_event): Handle
	Return and KP_Enter.

Fri Oct 18 15:38:50 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkprogressbar.c (gtk_progress_bar_set_text): 
	Reset use_text_format to %TRUE for a %NULL text string.
	(#94157, once again).

Thu Oct 17 17:17:05 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkcheckbutton.c (gtk_check_button_size_request): 
	Fix use of uninitialized variable.

Thu Oct 17 14:38:37 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkaccellabel.c (gtk_accel_label_expose_event): 
	Align the baseline of the accelerator label with the 
	first baseline of the main label of the menu item. (#76953)

Wed Oct 16 18:25:24 2002  Owen Taylor  <otaylor@redhat.com>

	* gdk/x11/gdkevents-x11.c (translate_key_event): 
	Use gdk_keymap_translate_keyboard_state() rather than
	XLookupString() to get the keysymbol, since XLookupString
	can confuse the input method handling. (#93575)

	* gdk/x11/gdkkeys-x11.c: Rewrite the handling of
	key translation for the non-XKB case to properly
	handle Shift_Lock, Caps_Lock, Num_Lock according
	to the Xlib spec. (#67066)

2002-10-17  Havoc Pennington  <hp@redhat.com>

	* gtk/gtkwindow.c (gtk_window_compute_configure_request): fix
	compiler warnings

Thu Oct 17 22:37:57 2002  Soeren Sandmann  <sandmann@daimi.au.dk>

	* gtk/gtkwindow.c (get_center_monitor_of_window): fix typo to make
	it compile
	
2002-10-16  Havoc Pennington  <hp@redhat.com>

	* gdk/x11/gdkscreen-x11.c (gdk_screen_get_monitor_geometry): add
	g_return_if_fail for monitor number <= 0

	* gtk/gtkmenu.c (gtk_menu_position): handle case where pointer 
	is outside the screen.

	* gtk/gtkwindow.c (get_monitor_center): factor out 
	the code to position a window in center
	(gtk_window_compute_configure_request): use here